# nonwordgen

./: .coveragerc  .gitignore  .treeignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  build-nonwords-gen.bat  build_release.py  mypy.ini  nonwords-gen.spec  noxfile.py  pyproject.toml  ruff.toml  run_gui.py
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  DOCUMENTATION_UPDATE.yml  FEATURE_REQUEST.yml
.github/hooks/: prepush
.github/scripts/: check_versions_matches_tag.py
.github/workflows/: ci.yml  pr-labeler.yml  release.yml
assets/: nonword-gen.xcf
licenses/: wordfreq-LICENSE.txt  wordfreq-NOTICE.txt
nonwordgen/: __init__.py  __main__.py  cli.py  config.py  dictionaries.py  dictionary_base.py  generator.py  gui.py  language_base.py  phonotactics.py  strictness.py  textgen.py
nonwordgen/languages/: __init__.py  afrikaans.py  czech.py  danish.py  dutch.py  english.py  french.py  german.py  greek.py  hebrew.py  hindi.py  hungarian.py  indonesian.py  italian.py  korean.py  malay.py  norwegian.py  polish.py  portuguese.py  romanian.py  russian.py  scb.py  spanish.py  swahili.py  swedish.py  tagalog.py  thai.py  turkish.py  vietnamese.py  yoruba.py
src/nonwordgen/: __init__.py  __main__.py  cli.py  config.py  dictionaries.py  dictionary_base.py  generator.py  gui.py  language_base.py  phonotactics.py  strictness.py  textgen.py
src/nonwordgen/languages/: __init__.py  afrikaans.py  czech.py  danish.py  dutch.py  english.py  french.py  german.py  greek.py  hebrew.py  hindi.py  hungarian.py  indonesian.py  italian.py  korean.py  malay.py  norwegian.py  polish.py  portuguese.py  romanian.py  russian.py  scb.py  spanish.py  swahili.py  swedish.py  tagalog.py  thai.py  turkish.py  vietnamese.py  yoruba.py
tests/: test_config_validation.py  test_dictionaries.py  test_generator.py  test_textgen.py
tools/: add_spdx_headers.py  generate_changelog.py  generate_sha256.py  make_release.py  remove_spdx_from_markdown.py
