[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonwordgen"
description = "Generate English-like non-words with configurable strictness."
readme = "README.md"
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
requires-python = ">=3.11"
license = "MIT"
dependencies = []
dynamic = ["version"]
keywords = ["generator", "language", "linguistics", "cli", "words"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dictionaries = [
    "wordfreq>=3.0.1",
]
gui = [
    "PyQt6>=6.5",
]
dev = [
    "pytest>=7.4",
]

[project.scripts]
nonwordgen = "nonwordgen.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nonwordgen*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "nonwordgen.__version__"}
