[build-system]
requires = ["setuptools>=68.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "nonwordgen"
version = "1.0.1"
description = "Generate English-like non-words with configurable strictness."
readme = "README.md"
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
requires-python = ">=3.11"
license = "MIT"
dependencies = []
keywords = ["generator", "language", "linguistics", "cli", "words"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dictionaries = [
    "wordfreq>=3.0.1",
]
gui = [
    "PyQt6>=6.5",
]
dev = [
    "pytest>=7.4",
    "coverage>=7.4",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "nox>=2024.0.0",
    "pyinstaller>=5.13.0",
]

[project.scripts]
nonwordgen = "nonwordgen.cli:main"
nonwordgen-gui = "nonwordgen.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
