# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools>=68.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "nonwordgen"
version = "1.2.1"
description = "Generate realistic like non-words in multiple languages."
readme = "README.md"
authors = [{name = "Matthew Craig", email = "taggedzi.mpc@gmail.com"}]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
keywords = ["generator", "language", "linguistics", "cli", "words"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/taggedzi/nonwordgen"
Source = "https://github.com/taggedzi/nonwordgen"
Issues = "https://github.com/taggedzi/nonwordgen/issues"
Changelog = "https://github.com/taggedzi/nonwordgen/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dictionaries = [
    "wordfreq>=3.0.1",
]
gui = [
    "PyQt6>=6.5",
]
dev = [
    "pytest>=7.4",
    "coverage>=7.4",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "nox>=2024.0.0",
    "pyinstaller>=5.13.0",
]

[project.scripts]
nonwordgen = "nonwordgen.cli:main"
nonwordgen-gui = "nonwordgen.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
